// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders cavatica project item - disable cavatica link 1`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <div
        class="header"
      >
        SD_WGP8RW3W gatk-haplotypecaller
      </div>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders cavatica project item - show edit button 1`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <a
        class="header"
        href="https://cavatica.sbgenomics.com/u/kolbmand/sd-wgp8rw3w-gatk-haplotypecaller"
        target="_blank"
      >
        SD_WGP8RW3W gatk-haplotypecaller 
        <i
          aria-hidden="true"
          class="external small link icon"
        />
      </a>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders cavatica project item - show edit button 2`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <a
        class="header"
        href="https://cavatica.sbgenomics.com/u/kolbmand/sd-wgp8rw3w-gatk-haplotypecaller"
        target="_blank"
      >
        SD_WGP8RW3W gatk-haplotypecaller 
        <i
          aria-hidden="true"
          class="external small link icon"
        />
      </a>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders cavatica project item - show unlink project button 1`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
      <button
        class="ui mini basic negative right floated button ml-10"
      >
        <i
          aria-hidden="true"
          class="unlink icon"
        />
        UNLINK
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <a
        class="header"
        href="https://cavatica.sbgenomics.com/u/kolbmand/sd-wgp8rw3w-gatk-haplotypecaller"
        target="_blank"
      >
        SD_WGP8RW3W gatk-haplotypecaller 
        <i
          aria-hidden="true"
          class="external small link icon"
        />
      </a>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders cavatica project item - show unlink project button 2`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
      <button
        class="ui mini basic negative right floated button ml-10"
      >
        <i
          aria-hidden="true"
          class="unlink icon"
        />
        UNLINK
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <a
        class="header"
        href="https://cavatica.sbgenomics.com/u/kolbmand/sd-wgp8rw3w-gatk-haplotypecaller"
        target="_blank"
      >
        SD_WGP8RW3W gatk-haplotypecaller 
        <i
          aria-hidden="true"
          class="external small link icon"
        />
      </a>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders cavatica project item - show unlink project button 3`] = `
<div>
  <div
    class="item"
    role="listitem"
  >
    <div
      class="right floated content"
    >
      <button
        class="ui mini basic primary right floated button"
      >
        <i
          aria-hidden="true"
          class="pencil icon"
        />
        EDIT
      </button>
      <button
        class="ui mini basic negative right floated button ml-10"
      >
        <i
          aria-hidden="true"
          class="unlink icon"
        />
        UNLINK
      </button>
    </div>
    <i
      aria-hidden="true"
      class="paper plane outline icon"
    />
    <div
      class="content"
    >
      <a
        class="header"
        href="https://cavatica.sbgenomics.com/u/kolbmand/sd-wgp8rw3w-gatk-haplotypecaller"
        target="_blank"
      >
        SD_WGP8RW3W gatk-haplotypecaller 
        <i
          aria-hidden="true"
          class="external small link icon"
        />
      </a>
      <div
        class="ui bulleted horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          Created
           by kolbmand 
          <time
            datetime="2019-08-14T18:29:01.000Z"
            title="14 Aug 2019"
          >
            4 months from now
          </time>
        </div>
        <div
          class="item"
          role="listitem"
        >
          bwa_mem
        </div>
        <div
          class="item"
          role="listitem"
        >
          <code>
            kolbmand/sd-wgp8rw3w-gatk-haplotypecaller
          </code>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders import volume button - modal open 1`] = `
<div>
  <button
    class="ui mini icon primary left labeled button ml-10"
  >
    <i
      aria-hidden="true"
      class="cloud download icon"
    />
    Import Volume
  </button>
</div>
`;

exports[`renders import volume confirm - button 1`] = `
<div>
  <button
    class="ui mini icon primary left labeled button ml-10"
  >
    <i
      aria-hidden="true"
      class="cloud download icon"
    />
    Import Volume
  </button>
</div>
`;
